--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-pandas==1.2.*
-jupyterlab==3.0.*
 eli5==0.11.*
+jupyterlab==3.0.*
+matplotlib==3.3.*
+pandas==1.2.*
+pdpbox==0.2.*
 scikit-learn==0.24.*
